--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "webpack-template",
-  "version": "1.0.0",
-  "description": "A template for projects bundled using webpack",
+  "name": "giga-stonks",
+  "version": "0.1.0",
+  "description": "A stock monitoring app",
   "private": true,
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -13,12 +13,12 @@
   "license": "ISC",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/sandeepdotcode/webpack-template.git"
+    "url": "git+https://github.com/sandeepdotcode/GigaStonks.git"
   },
   "bugs": {
-    "url": "https://github.com/sandeepdotcode/webpack-template/issues"
+    "url": "https://github.com/sandeepdotcode/GigaStonks/issues"
   },
-  "homepage": "https://github.com/sandeepdotcode/webpack-template#readme",
+  "homepage": "https://github.com/sandeepdotcode/GigaStonks#readme",
   "devDependencies": {
     "css-loader": "^6.8.1",
     "html-webpack-plugin": "^5.5.3",
